--- a/index.html
+++ b/index.html
@@ -1,20 +1,52 @@
-<html ng-app='store'>
-<head>
-  <style type="text/css" href="bootstrap.min.css"></style>
-  <title>Testing Angular</title>
-</head>
-<body ng-controller="StoreController as store">
-  <script type="text/javascript" src="angular.min.js"></script>
-  <script type="text/javascript" src="app.js"></script>
-
-  <ul class='list-group'>
-    <li class='list-group-item' ng-repeat='product in store.products'>
+<!DOCTYPE html>
+<html ng-app="gemStore">
+  <head>
+    <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="app.js"></script>
+  </head>
+  <body class="list-group" ng-controller="StoreController as store">
+    <header>
+      <h1 class="text-center">Soto's Gems</h1>
+      <h2 class="text-center"> an Angular store </h2>
+    </header>
+    <div class="list-group-item" ng-repeat="product in store.products">
       <h3>
-        {{ product.name }}
-        <em class='pull-right'>{{ product.price | currency }}</em>
+        {{product.name}}
+        <em class="pull-right">{{product.price | currency}}</em>
       </h3>
-    </li>
-  </ul>
 
-</body>
+      <!-- Image Gallery  -->
+      <div class='gallery' ng-show="product.images.length" ng-controller='GalleryController as gallery'>
+        <img ng-src="{{product.images[gallery.current]}}" />
+        <ul class="list-inline thumbs">
+          <li class="thumbnail" ng-repeat="image in product.images">
+            <img ng-src="{{image}}" />
+          </li>
+        </ul>
+      </div>
+
+      <section class="tab" ng-controller="TabController as tab">
+        <ul class="nav nav-pills">
+          <li ng-class="{ active: tab.isSet(1) }">
+            <a href ng-click="tab.setTab(1)">Description</a></li>
+          <li ng-class="{ active: tab.isSet(2) }">
+            <a href ng-click="tab.setTab(2)">Specs</a></li>
+          <li ng-class="{ active: tab.isSet(3) }">
+            <a href ng-click="tab.setTab(3)">Reviews</a></li>
+        </ul>
+        <div ng-show="tab.isSet(1)">
+          <h4>Description</h4>
+          <blockquote>{{product.description}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(2)">
+          <h4>Specs</h4>
+          <blockquote>Shine: {{product.shine}}</blockquote>
+        </div>
+        <div ng-show="tab.isSet(3)">
+          <h4>Reviews</h4>
+        </div>
+      </section>
+    </div>
+  </body>
 </html>
