--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html ng-app="gemStore">
   <head>
     <link rel="stylesheet" type="text/css" href="bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="application.css" />
     <script type="text/javascript" src="angular.min.js"></script>
+    <script type="text/javascript" src="products.js"></script>
     <script type="text/javascript" src="app.js"></script>
   </head>
 
   <body ng-controller="StoreController as store">
-    <!--  Store Header  -->
     <header>
-      <h1 class="text-center">Flatlander Crafted Gems</h1>
-      <h2 class="text-center"> an Angular store </h2>
+      <h2 class="text-center">Soto's Magnificent Emporium</h2>
+      <h3 class="text-center"> an sinangular store </h3>
     </header>
 
-    <!--  Products Container  -->
     <div class="list-group">
-      <!--  Product Container  -->
       <div class="list-group-item" ng-repeat="product in store.products">
         <h3>{{product.name}} <em class="pull-right">{{product.price | currency}}</em></h3>
         <product-gallery></product-gallery>
