--- a/product-gallery.html
+++ b/product-gallery.html
@@ -1,10 +1,10 @@
-<div  ng-show="product.images.length">
+<div ng-show="product.images.length">
   <div class="img-wrap">
     <img ng-src="{{product.images[gallery.current]}}" />
   </div>
   <ul class="img-thumbnails clearfix">
     <li class="small-image pull-left thumbnail" ng-repeat="image in product.images">
-      <img ng-src="{{image}}" />
+      <img ng-src="{{image}}" class="minified"/>
     </li>
   </ul>
 </div>
